--- a/.github/workflows/run-app1.yml
+++ b/.github/workflows/run-app1.yml
@@ -24,6 +24,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
-    - name: Test App-1
+    - name: Run App-1
       run: |
-        ./tests.sh
+        ./apps.sh
