--- a/.github/workflows/run-app1.yml
+++ b/.github/workflows/run-app1.yml
@@ -26,13 +26,13 @@ jobs:
         python -m pip install -r requirements.txt
     - name: Run App-1
       run: |
-        ./apps.sh
-    - name: Archive App-1
-      run: |
-        sudo apt-get install zip gzip tar
-        zip -r App1.zip src/app1/
-        ls -la
-        cd src/
-        ls -la
+        ls
+    # - name: Archive App-1
+    #   run: |
+    #     sudo apt-get install zip gzip tar
+    #     zip -r App1.zip src/app1/
+    #     ls -la
+    #     cd src/
+    #     ls -la
 
 
