--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: "3"
 services:
     docker-app:
-        build: ./docker-app
+        build: 
+            context: .
+            dockerfile: ./docker-app/Dockerfile
         container_name: multi_app
-    docker-test:
-        build: ./docker-test
-        container_name: multi_test
+        volumes:
+            - ./:/home/basavyr
