--- a/docker-app/Dockerfile
+++ b/docker-app/Dockerfile
@@ -1,7 +1,19 @@
 FROM basavyr/pyenv-ubuntu
 
+SHELL ["/bin/bash", "-c"]
+
+ENV PYTHON_VERSION 3.8.6
+ENV PATH=/root/.pyenv/plugins/pyenv-virtualenv/shims:/root/.pyenv/shims:/root/.pyenv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+ENV PYTHONPATH "${PYTHONPATH}:/usr/local/bin"
+
+
+
+
+
 WORKDIR /home/basayr
+
 
 COPY . . 
 
-CMD ["ls","-la"]
+# CMD ["/bin/bash","./tests/test_app3.py"]
+CMD ["/bin/bash","./tests.sh"]
