--- a/docker-app/Dockerfile
+++ b/docker-app/Dockerfile
@@ -6,12 +6,11 @@ ENV PYTHON_VERSION 3.8.6
 ENV PATH=/root/.pyenv/plugins/pyenv-virtualenv/shims:/root/.pyenv/shims:/root/.pyenv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 ENV PYTHONPATH "${PYTHONPATH}:/usr/local/bin"
 
-
-
-
-
 WORKDIR /home/basayr
 
+ADD requirements.txt .
+
+RUN pip install -r requirements.txt
 
 COPY . . 
 
