--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Run-App-1
+name: Test-Apps
 
 on:
   push:
@@ -24,15 +24,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
-    - name: Run App-1
+    - name: Test Apps
       run: |
-        ls
-    # - name: Archive App-1
-    #   run: |
-    #     sudo apt-get install zip gzip tar
-    #     zip -r App1.zip src/app1/
-    #     ls -la
-    #     cd src/
-    #     ls -la
-
-
+        ./tests.sh
